--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: typst_book::release
+name: shiroa::release
 on:
   release:
     types: [created]
@@ -38,7 +38,7 @@ jobs:
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-dist
+          name: shiroa-dist
           path: frontend/dist
           if-no-files-found: error
 
@@ -118,17 +118,17 @@ jobs:
       - name: Run Native Build
         shell: pwsh
         run: |
-          cargo build --release --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin typst-book
-          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin typst-book
+          cargo build --release --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin shiroa
+          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin shiroa
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}
-          path: target/${{ matrix.rust-target }}/release-stripped/typst-book*
+          name: shiroa-${{ env.target }}
+          path: target/${{ matrix.rust-target }}/release-stripped/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}-relwithdebuginfo
-          path: target/${{ matrix.rust-target }}/release/typst-book*
+          name: shiroa-${{ env.target }}-relwithdebuginfo
+          path: target/${{ matrix.rust-target }}/release/shiroa*
           if-no-files-found: error
 
   build_linux_riscv64:
@@ -157,16 +157,16 @@ jobs:
           target: ${{ matrix.rust-target }}
       - name: Build cross image
         run: |
-          docker build -t typst-book/riscv64 ${GITHUB_WORKSPACE}/.github/cross-linux-riscv64/
+          docker build -t shiroa/riscv64 ${GITHUB_WORKSPACE}/.github/cross-linux-riscv64/
         env:
           CROSS_DOCKER_IN_DOCKER: true
       - name: Run Cross Build
         run: |
           mkdir -p frontend/node_modules
           cp -r artifacts/typst-ts-dist frontend/node_modules/@myriaddreamin
-          cp -r artifacts/typst-book-dist frontend/dist
-          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project typst-book/riscv64:latest cargo build --manifest-path cli/Cargo.toml --release --target ${CARGO_TARGET} --bin typst-book
-          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project typst-book/riscv64:latest cargo build --manifest-path cli/Cargo.toml --profile release-stripped --target ${CARGO_TARGET} --bin typst-book
+          cp -r artifacts/shiroa-dist frontend/dist
+          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project shiroa/riscv64:latest cargo build --manifest-path cli/Cargo.toml --release --target ${CARGO_TARGET} --bin shiroa
+          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project shiroa/riscv64:latest cargo build --manifest-path cli/Cargo.toml --profile release-stripped --target ${CARGO_TARGET} --bin shiroa
         env:
           CROSS_DOCKER_IN_DOCKER: true
           CARGO_TARGET: ${{ matrix.rust-target }}
@@ -174,13 +174,13 @@ jobs:
           PKG_CONFIG_ALLOW_CROSS: true
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}
-          path: target/${{ matrix.rust-target }}/release-stripped/typst-book*
+          name: shiroa-${{ env.target }}
+          path: target/${{ matrix.rust-target }}/release-stripped/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}-relwithdebuginfo
-          path: target/${{ matrix.rust-target }}/release/typst-book*
+          name: shiroa-${{ env.target }}-relwithdebuginfo
+          path: target/${{ matrix.rust-target }}/release/shiroa*
           if-no-files-found: error
 
   build_alpine:
@@ -220,17 +220,17 @@ jobs:
           dir: 'frontend'
       - name: build binaries
         run: |
-          cargo build --release --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin typst-book
-          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin typst-book
+          cargo build --release --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin shiroa
+          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin shiroa
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}
-          path: target/${{ env.RUST_TARGET }}/release-stripped/typst-book*
+          name: shiroa-${{ env.target }}
+          path: target/${{ env.RUST_TARGET }}/release-stripped/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: typst-book-${{ env.target }}-relwithdebuginfo
-          path: target/${{ env.RUST_TARGET }}/release/typst-book*
+          name: shiroa-${{ env.target }}-relwithdebuginfo
+          path: target/${{ env.RUST_TARGET }}/release/shiroa*
           if-no-files-found: error
 
   release:
@@ -253,32 +253,32 @@ jobs:
           mkdir -p gh-release/
           pack_release() {
             target=$2
-            src=typst-book-$1
-            name=typst-book-$target
+            src=shiroa-$1
+            name=shiroa-$target
             mkdir -p tmp/$name
             rm -f artifacts/$src/*.d
             rm -f artifacts/$src/*.pdb
             
             mkdir -p release/$name/bin
-            cp artifacts/$src-relwithdebuginfo/typst-book* "release/$name/bin/"
+            cp artifacts/$src-relwithdebuginfo/shiroa* "release/$name/bin/"
             cp -r CHANGELOG release/$name/
             cp -r github-pages/docs release/$name/
             cp README.md \
               LICENSE \
               CHANGELOG.md \
               release/$name/
-            chmod +x release/$name/bin/typst-book*
+            chmod +x release/$name/bin/shiroa*
             tar czvf gh-release/$name-relwithdebuginfo.tar.gz -C release $name
             
             mkdir -p release-stripped/$name/bin
-            cp artifacts/$src/typst-book* "release-stripped/$name/bin/"
+            cp artifacts/$src/shiroa* "release-stripped/$name/bin/"
             cp -r CHANGELOG release-stripped/$name/
             cp -r github-pages/docs release-stripped/$name/
             cp README.md \
               LICENSE \
               CHANGELOG.md \
               release-stripped/$name/
-            chmod +x release-stripped/$name/bin/typst-book*
+            chmod +x release-stripped/$name/bin/shiroa*
             tar czvf gh-release/$name.tar.gz -C release-stripped $name
           }
           pack_release win32-x64     x86_64-pc-windows-msvc
