--- a/contrib/typst/book/typst.toml
+++ b/contrib/typst/book/typst.toml
@@ -1,6 +1,6 @@
 [package]
-name = "book"
-version = "0.2.5"
+name = "shiroa"
+version = "0.1.0"
 entrypoint = "lib.typ"
 authors = ["Myriad-Dreamin"]
 license = "Apache-2.0"
