--- a/.github/workflows/release_with_artifact.yaml
+++ b/.github/workflows/release_with_artifact.yaml
@@ -74,16 +74,16 @@ jobs:
         shell: pwsh
         run: |
           cargo build --release --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin shiroa
-          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin shiroa
+          cargo build --profile relwithdebinfo --manifest-path cli/Cargo.toml --target ${{ matrix.rust-target }} --bin shiroa
       - uses: actions/upload-artifact@v3
         with:
           name: shiroa-${{ env.target }}
-          path: target/${{ matrix.rust-target }}/release-stripped/shiroa*
+          path: target/${{ matrix.rust-target }}/release/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
           name: shiroa-${{ env.target }}-relwithdebuginfo
-          path: target/${{ matrix.rust-target }}/release/shiroa*
+          path: target/${{ matrix.rust-target }}/relwithdebinfo/shiroa*
           if-no-files-found: error
 
   build_linux_riscv64:
@@ -118,7 +118,7 @@ jobs:
         run: |
           mkdir -p frontend/node_modules
           docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project shiroa/riscv64:latest cargo build --manifest-path cli/Cargo.toml --release --target ${CARGO_TARGET} --bin shiroa
-          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project shiroa/riscv64:latest cargo build --manifest-path cli/Cargo.toml --profile release-stripped --target ${CARGO_TARGET} --bin shiroa
+          docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${GITHUB_WORKSPACE}:/project -w /project shiroa/riscv64:latest cargo build --manifest-path cli/Cargo.toml --profile relwithdebinfo --target ${CARGO_TARGET} --bin shiroa
         env:
           CROSS_DOCKER_IN_DOCKER: true
           CARGO_TARGET: ${{ matrix.rust-target }}
@@ -127,12 +127,12 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: shiroa-${{ env.target }}
-          path: target/${{ matrix.rust-target }}/release-stripped/shiroa*
+          path: target/${{ matrix.rust-target }}/release/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
           name: shiroa-${{ env.target }}-relwithdebuginfo
-          path: target/${{ matrix.rust-target }}/release/shiroa*
+          path: target/${{ matrix.rust-target }}/relwithdebinfo/shiroa*
           if-no-files-found: error
 
   build_alpine:
@@ -161,7 +161,7 @@ jobs:
       - name: build binaries
         run: |
           cargo build --release --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin shiroa
-          cargo build --profile release-stripped --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin shiroa
+          cargo build --profile relwithdebuginfo --manifest-path cli/Cargo.toml --target $RUST_TARGET --bin shiroa
       - uses: actions/upload-artifact@v3
         with:
           name: shiroa-font-assets
@@ -169,12 +169,12 @@ jobs:
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: shiroa-${{ env.target }}
-          path: target/${{ env.RUST_TARGET }}/release-stripped/shiroa*
+          name: shiroa-${{ env.target }}-relwithdebuginfo
+          path: target/${{ env.RUST_TARGET }}/relwithdebuginfo/shiroa*
           if-no-files-found: error
       - uses: actions/upload-artifact@v3
         with:
-          name: shiroa-${{ env.target }}-relwithdebuginfo
+          name: shiroa-${{ env.target }}
           path: target/${{ env.RUST_TARGET }}/release/shiroa*
           if-no-files-found: error
 
@@ -204,8 +204,19 @@ jobs:
             rm -f artifacts/$src/*.d
             rm -f artifacts/$src/*.pdb
             
+            mkdir -p relwithdebinfo/$name/bin
+            cp artifacts/$src-relwithdebuginfo/shiroa* "relwithdebinfo/$name/bin/"
+            cp -r CHANGELOG relwithdebinfo/$name/
+            cp -r github-pages/docs relwithdebinfo/$name/
+            cp README.md \
+              LICENSE \
+              CHANGELOG.md \
+              relwithdebinfo/$name/
+            chmod +x relwithdebinfo/$name/bin/shiroa*
+            tar czvf gh-release/$name-relwithdebuginfo.tar.gz -C relwithdebinfo $name
+            
             mkdir -p release/$name/bin
-            cp artifacts/$src-relwithdebuginfo/shiroa* "release/$name/bin/"
+            cp artifacts/$src/shiroa* "release/$name/bin/"
             cp -r CHANGELOG release/$name/
             cp -r github-pages/docs release/$name/
             cp README.md \
@@ -213,18 +224,7 @@ jobs:
               CHANGELOG.md \
               release/$name/
             chmod +x release/$name/bin/shiroa*
-            tar czvf gh-release/$name-relwithdebuginfo.tar.gz -C release $name
-            
-            mkdir -p release-stripped/$name/bin
-            cp artifacts/$src/shiroa* "release-stripped/$name/bin/"
-            cp -r CHANGELOG release-stripped/$name/
-            cp -r github-pages/docs release-stripped/$name/
-            cp README.md \
-              LICENSE \
-              CHANGELOG.md \
-              release-stripped/$name/
-            chmod +x release-stripped/$name/bin/shiroa*
-            tar czvf gh-release/$name.tar.gz -C release-stripped $name
+            tar czvf gh-release/$name.tar.gz -C release $name
           }
           pack_release win32-x64     x86_64-pc-windows-msvc
           pack_release win32-ia32    i686-pc-windows-msvc
