--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,10 @@ strip = false
 
 [workspace.dependencies]
 
-typst = "0.11.1"
-typst-assets = "0.11.1"
-reflexo-typst = { version = "0.5.0-rc7" }
-reflexo-vec2svg = { version = "0.5.0-rc7", features = [
+typst = "0.12.0"
+typst-assets = "0.12.0"
+reflexo-typst = { version = "0.5.0-rc8" }
+reflexo-vec2svg = { version = "0.5.0-rc8", features = [
     "experimental-ligature",
 ] }
 
@@ -70,12 +70,12 @@ include_dir = "0.7.3"
 pathdiff = "0.2.1"
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
-typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.1-content-hint" }
-reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.0-rc7", package = "reflexo-vec2svg" }
-reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.0-rc7", package = "reflexo-typst" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.0-rc8-2" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.0-rc8-2" }
+reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.0-rc8", package = "reflexo-vec2svg" }
+reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.0-rc8", package = "reflexo-typst" }
 
-# typst = { path = "../../../typst/crates/typst" }
-# typst-syntax = { path = "../../../typst/crates/typst-syntax" }
-# reflexo-vec2svg = { path = "../../exporter/svg" }
-# reflexo-typst = { path = "../../core" }
+# typst = { path = "../typst/crates/typst" }
+# typst-syntax = { path = "../typst/crates/typst-syntax" }
+# reflexo-vec2svg = { path = "../typst.ts/crates/conversion/vec2svg" }
+# reflexo-typst = { path = "../typst.ts/crates/reflexo-typst" }
