--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "0.5.0-rc7",
-    "@myriaddreamin/typst.ts": "0.5.0-rc7"
+    "@myriaddreamin/typst-ts-renderer": "0.5.0-rc8",
+    "@myriaddreamin/typst.ts": "0.5.0-rc8"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
     "vite": "^5.4.2",
-    "vite-plugin-singlefile": "^2.0.2",
-    "typescript": "^5.3.3"
+    "vite-plugin-singlefile": "^2.0.2"
   }
 }
