--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,16 +14,14 @@ resolver = "2"
 members = ["cli", "tools/build-from-source"]
 
 [profile.release]
+codegen-units = 1 # Reduce number of codegen units to increase optimizations
 opt-level = 3
-lto = "fat"
-debug = false
-strip = true
+panic = "abort"   # Abort on panic
 
-[profile.relwithdebinfo]
+# The profile that 'dist' will build with
+[profile.dist]
 inherits = "release"
 lto = "thin"
-debug = true
-strip = false
 
 [workspace.dependencies]
 
