fix: name to package

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shiroa-cli"
+name = "shiroa"
 description = "Command line tool for shiroa."
 authors.workspace = true
 version.workspace = true
