--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ tokio = { version = "1.42", features = ["full"] }
 serde = { version = "1" }
 serde_json = "1"
 toml = "0.8"
+regex = "1.8.1"
 
 # web
 warp = { version = "0.3", features = ["compression"] }
@@ -53,6 +54,9 @@ clap_complete_fig = "4.5"
 # logging and tracing
 env_logger = "0.11"
 log = "0.4.25"
+
+# search
+elasticlunr-rs = "3.0.2"
 
 # misc
 vergen = { version = "9.0.4", features = ["build", "cargo", "rustc"] }
