--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "docs": "cargo run --release --bin shiroa -- serve --font-path ./assets/extra-fonts/ -w . github-pages/docs",
+    "docs:html": "yarn docs --mode static-html",
     "generate-ci": "dist generate",
     "draft-release": "node scripts/draft-release.mjs"
   },
