--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,12 @@ lto = "thin"
 
 typst = "0.13.0"
 typst-eval = "0.13.0"
-typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
-reflexo-typst = { version = "0.5.4", features = ["html"] }
-reflexo-vec2svg = { version = "0.5.4", features = ["experimental-ligature"] }
+typst-assets = "0.13.0"
+# typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
+reflexo-typst = { version = "0.5.5-rc7", features = ["html"] }
+reflexo-vec2svg = { version = "0.5.5-rc7", features = [
+    "experimental-ligature",
+] }
 
 handlebars = "6.3.0"
 
@@ -66,17 +69,17 @@ include_dir = "0.7.3"
 pathdiff = "0.2.1"
 
 [patch.crates-io]
-typst = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-html = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-svg = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-render = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-pdf = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-syntax = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-eval = { git = "https://github.com/ParaN3xus/typst.git", tag = "tinymist-nightly-v0.12.19-rc2-content-hint" }
-typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-html = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-render = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.5.5-rc5" }
+# typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
 
-reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "827a4fecb76cd88482642734b1349df570a19336", package = "reflexo-vec2svg" }
-reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "827a4fecb76cd88482642734b1349df570a19336", package = "reflexo-typst" }
+# reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.5-rc7", package = "reflexo-vec2svg" }
+# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.5-rc7", package = "reflexo-typst" }
 
 # typst = { path = "../typst/crates/typst" }
 # typst-syntax = { path = "../typst/crates/typst-syntax" }
