--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "^0.5.2",
-    "@myriaddreamin/typst.ts": "^0.5.2"
+    "@myriaddreamin/typst-ts-renderer": "^0.5.5-rc7",
+    "@myriaddreamin/typst.ts": "^0.5.5-rc7"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
