feat: add CI specific to html target (#107)
* feat: add CI specific to html target

* fix: command

--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -43,6 +43,12 @@ jobs:
           node-version: 22.x
       - name: Install Artifact Cache
         uses: Swatinem/rust-cache@v2
+      - name: Build Book (HTML Target)
+        run: |
+          cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/html/ -w . github-pages/docs --mode static-html
+          mv ./github-pages/dist/ ./github-pages/dist-html/
+          mkdir -p ./github-pages/dist/
+          mv ./github-pages/dist-html ./github-pages/dist/html
       - name: Build Book
         run: |
           cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/ -w . github-pages/docs
