--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Download font assets
+        run: |
+          mkdir -p assets/fonts
+          curl -L https://github.com/Myriad-Dreamin/shiroa/releases/download/v0.1.0/charter-font-assets.tar.gz | tar -xvz -C assets/fonts
       - name: Install Tinymist
         env:
           TINYMIST_VERRION: v0.13.10-rc1
