--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ handlebars = "6.3.0"
 anyhow = "1"
 comemo = "0.4"
 tokio = { version = "1.42", features = ["full"] }
+rayon = "1"
 
 # cryptography and processing
 serde = { version = "1" }
@@ -54,6 +55,8 @@ warp = { version = "0.3", features = ["compression"] }
 clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
 clap_complete = "4.5"
 clap_complete_fig = "4.5"
+termcolor = "1"
+codespan-reporting = "0.11"
 
 # logging and tracing
 env_logger = "0.11"
