--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -39,7 +39,11 @@ toml.workspace = true
 env_logger.workspace = true
 log.workspace = true
 
-reflexo-typst = { workspace = true, features = ["dynamic-layout", "svg"] }
+reflexo-typst = { workspace = true, features = [
+    "dynamic-layout",
+    "svg",
+    "system",
+] }
 reflexo-vec2svg.workspace = true
 handlebars.workspace = true
 pathdiff.workspace = true
